# resolution-for-hackclub

./: .gitignore  README.md  index.html  main.py  style.css
week-8/: .gitignore  README.md  app_oauth.py  manifest.json  pyproject.toml  requirements.txt
week-8/bob.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
week-8/listeners/commands/: __init__.py  commands.py
week-8/listeners/events/: __init__.py  joined.py
week-8/tests/listeners/commands/: test_sample_commands.py
week1/: main.py
week2/: main.py
week3/: main.py
week4/: main.py
week5/static/: app.py  index.html  style.css
week6/: main.py
week7/: main.py
