[project]
name = "bob"
version = "0.0.1"
description = "Slack Bolt app"
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-cli-hooks<1.0.0",  # <--- Change this line from >=1.0.0 to <1.0.0
]
[tool.setuptools.packages.find]
include = ["assets*", "listeners*"]

[tool.ruff]
line-length = 125
exclude = [".venv", "venv"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"